# Kay

./: CMakeLists.txt  FindEmbree.cmake  LICENSE  README.md
embree/lib-macos/: libembree3.dylib
src/: kay.cpp  kay.h  kmath.h  render.cpp  render.h
test/: 01_test.py  02_test.py  03_test.py  CMakeCache.txt  Makefile  cmake_install.cmake  triangle.py
test/pybind11/: Makefile  cmake_install.cmake
test/pykay/: __init__.py  camera.py  load_obj.py  ray.py  render_torch.py  util.py
